--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
