--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "firebase": "^7.0.0",
     "jsencrypt": "^3.0.0-rc.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -16,9 +17,7 @@
     "react-scripts": "3.1.1",
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-promise-middleware": "^6.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
