--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
